--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap-icons": "^1.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
