--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "shippop-exam",
   "version": "0.1.0",
   "private": true,
-  "engines":{
-    "node":"12.x"
-  },
+  "homepage": "http://nirawit1568.github.io/Shippop",
   "dependencies": {
     "bootstrap-icons": "^1.4.0",
     "react": "^17.0.1",
@@ -20,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
