--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "shippop-exam",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nirawit1568.github.io/Shippop",
   "dependencies": {
     "bootstrap-icons": "^1.4.0",
     "react": "^17.0.1",
@@ -18,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
